--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "helmet": "^7.1.0",
     "axios": "^1.6.2",
     "ws": "^8.16.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
