feat: scheduled transactions done

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@
 FLOW_NETWORK=testnet
 FLOW_ACCESS_NODE=https://rest-testnet.onflow.org
 
-# Contract Addresses
+# Contract Addresses (Testnet)
 FROTH_REWARDS_ADDRESS=0x8401ed4fc6788c8a
+AUTO_COMPOUND_ADDRESS=0x8401ed4fc6788c8a
+SCHEDULER_ADDRESS=0x8401ed4fc6788c8a
 DAPPER_PROTECTION_ADDRESS=0x8401ed4fc6788c8a
 
 # Dapper APIs
@@ -19,3 +21,10 @@ PORT=3000
 
 # Notifications
 NOTIFICATION_SERVICE_URL=
+
+# Service Account for Scheduled Transfers
+# Generate with: flow keys generate
+SERVICE_ACCOUNT_ADDRESS=0xYOUR_SERVICE_ACCOUNT_ADDRESS
+SERVICE_ACCOUNT_PRIVATE_KEY=YOUR_PRIVATE_KEY
+# Optional: Skip blockchain checks for development
+# SKIP_BLOCKCHAIN_CHECKS=true
