--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,13 @@ PORT=3000
 NOTIFICATION_SERVICE_URL=
 
 # Service Account for Scheduled Transfers
+# REQUIRED: This account executes scheduled transfers on behalf of users
 # Generate with: flow keys generate
-SERVICE_ACCOUNT_ADDRESS=0xYOUR_SERVICE_ACCOUNT_ADDRESS
-SERVICE_ACCOUNT_PRIVATE_KEY=YOUR_PRIVATE_KEY
-# Optional: Skip blockchain checks for development
+# The service account must have FLOW tokens to pay for transaction fees
+# Get testnet FLOW from: https://testnet-faucet.onflow.org/
+FLOW_SERVICE_ACCOUNT_ADDRESS=0xYourServiceAccountAddress
+FLOW_SERVICE_ACCOUNT_PRIVATE_KEY=your_private_key_here_without_0x
+FLOW_SERVICE_ACCOUNT_KEY_ID=0
+
+# Optional: Skip blockchain checks for development (not recommended for production)
 # SKIP_BLOCKCHAIN_CHECKS=true
